--- a/client/src/components/button.module.css
+++ b/client/src/components/button.module.css
@@ -4,6 +4,7 @@
     justify-content: center;
     padding: 1rem;
     font-size: 1rem;
+    font-weight: 305;
     border: 1px solid var(--text-primary);
     border-radius: 8px;
     background-color: #ffffff;
