--- a/src/client/components/button.module.css
+++ b/src/client/components/button.module.css
@@ -5,7 +5,7 @@
     padding: 1rem;
     font-size: 1rem;
     font-weight: 300;
-    border: 1px solid var(--text-primary);
+    border: 1px solid currentColor;
     border-radius: 8px;
     background-color: #ffffff;
     outline: 0;
